--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <!-- header section start  -->
-    <section class="header">
+    <section class="header" id="header">
         <div class="container">
             <nav class="navbar">
 
@@ -325,5 +325,7 @@
             </div>
         </div>
     </footer>
+    <!-- main javascript  -->
+    <script src="./js/script.js"></script>
 </body>
 </html>
